--- a/Xendit/M2Invoice/composer.json
+++ b/Xendit/M2Invoice/composer.json
@@ -8,7 +8,10 @@
   ],
   "require": {
     "php": "~7.0.0|~7.1.0|~7.2.0",
-    "magento/framework": "~100.0.4"
+    "magento/module-sales": "100.0.*",
+    "magento/module-checkout": "100.0.*",
+    "magento/module-payment": "100.0.*",
+    "magento/framework": "~100.0.0"
   },
   "autoload": {
     "files": [ "registration.php" ],
