reduce tech scope

--- a/Xendit/M2Invoice/composer.json
+++ b/Xendit/M2Invoice/composer.json
@@ -7,11 +7,11 @@
     "GPL-3.0"
   ],
   "require": {
-    "php": "~7.0.0|~7.1.0|~7.2.0",
-    "magento/module-sales": "100.0.*",
-    "magento/module-checkout": "100.0.*",
-    "magento/module-payment": "100.0.*",
-    "magento/framework": "~100.0.0"
+    "php": "~7.1.3||~7.2.0",
+    "magento/module-sales": "102.0.*",
+    "magento/module-checkout": "100.3.*",
+    "magento/module-payment": "100.3.*",
+    "magento/framework": "~102.0.0"
   },
   "autoload": {
     "files": [ "registration.php" ],
