--- a/Xendit/M2Invoice/composer.json
+++ b/Xendit/M2Invoice/composer.json
@@ -7,7 +7,7 @@
     "GPL-3.0"
   ],
   "require": {
-    "php": "~7.1.3||~7.2.0||~7.3.0",
+    "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0",
     "magento/module-sales": "102.0.*",
     "magento/module-checkout": "100.3.*",
     "magento/module-payment": "100.3.*",
