Test php codesniffer

--- a/.buddy/phpcodesniffer.yml
+++ b/.buddy/phpcodesniffer.yml
@@ -3,6 +3,7 @@
   events:
     - type: "PUSH"
       refs:
+        - "refs/heads/*"
         - "refs/heads/master"
     - type: "CREATE_REF"
       refs:
