--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
     "GPL-3.0"
   ],
   "require": {
-    "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0||~8.1.0",
+    "php": ">=7.1",
     "magento/module-sales": ">=102.0.3",
     "magento/module-checkout": ">=100.3.3",
     "magento/module-payment": ">=100.3.3",
-    "magento/framework": ">=102.0.0"
+    "magento/framework": ">=102.0.3"
   },
   "autoload": {
     "files": [ "registration.php" ],
