chore:modify cortex.yaml

--- a/cortex.yaml
+++ b/cortex.yaml
@@ -5,6 +5,7 @@ info:
   x-cortex-git:
     github:
       repository: xendit/xendit-magento-payment-module
+  x-cortex-tag: xendit-magento-payment-module
   x-cortex-owners:
   - type: GROUP
     name: xendit/tpi-dev
