--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
   "name": "xendit/m2invoice",
   "description": "Xendit Payment Gateway Module",
   "type": "magento2-module",
-  "version": "12.0.2",
+  "version": "12.0.3",
   "license": [
     "GPL-3.0"
   ],
   "require": {
-    "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0||~8.1.0||~8.2.0",
+    "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0||~8.1.0||~8.2.0||~8.3.0",
     "magento/module-sales": ">=102.0.3",
     "magento/module-checkout": ">=100.3.3",
     "magento/module-payment": ">=100.3.3",
